--- a/docs/latex/dir_13e138d54eb8818da29c3992edef070a.tex
+++ b/docs/latex/dir_13e138d54eb8818da29c3992edef070a.tex
@@ -4,10 +4,10 @@
 \begin{DoxyCompactItemize}
 \item 
 archivo \mbox{\hyperlink{_prueba__contro___i_r_8cpp}{Prueba\+\_\+contro\+\_\+\+IR.\+cpp}}
-\item 
+\begin{DoxyCompactList}\small\item\em Programa de prueba para el control dual (Botones e Infrarrojo) de un LED. \end{DoxyCompactList}\item 
 archivo \mbox{\hyperlink{_prueba__interrupciones_8cpp}{Prueba\+\_\+interrupciones.\+cpp}}
-\item 
+\begin{DoxyCompactList}\small\item\em Programa de prueba para la gestión de interrupciones externas mediante botones. \end{DoxyCompactList}\item 
 archivo \mbox{\hyperlink{_prueba__lectura_8cpp}{Prueba\+\_\+lectura.\+cpp}}
-\item 
+\begin{DoxyCompactList}\small\item\em Programa de prueba para la lectura y calibración de sensores QTR. \end{DoxyCompactList}\item 
 archivo \mbox{\hyperlink{_prueba__maquina_estados_8cpp}{Prueba\+\_\+maquina\+Estados.\+cpp}}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Programa de prueba para la Máquina de Estados Finitos (FSM). \end{DoxyCompactList}\end{DoxyCompactItemize}
