--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -15,8 +15,8 @@ Lista de todos los archivos con breves descripciones\+:\begin{DoxyCompactList}
 \item\contentsline{section}{src/\mbox{\hyperlink{motores_8cpp}{motores.\+cpp}} \\*Implementación de la capa de control de motores y manejo del driver DRV8833 }{\pageref{motores_8cpp}}{}
 \item\contentsline{section}{src/\mbox{\hyperlink{pid_8cpp}{pid.\+cpp}} \\*Implementación del controlador Proporcional-\/\+Integral-\/\+Derivativo (PID) }{\pageref{pid_8cpp}}{}
 \item\contentsline{section}{src/\mbox{\hyperlink{sensores_8cpp}{sensores.\+cpp}} \\*Implementación de la lectura y configuración de los sensores QTR-\/8A }{\pageref{sensores_8cpp}}{}
-\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__contro___i_r_8cpp}{Prueba\+\_\+contro\+\_\+\+IR.\+cpp}} }{\pageref{_prueba__contro___i_r_8cpp}}{}
-\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__interrupciones_8cpp}{Prueba\+\_\+interrupciones.\+cpp}} }{\pageref{_prueba__interrupciones_8cpp}}{}
-\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__lectura_8cpp}{Prueba\+\_\+lectura.\+cpp}} }{\pageref{_prueba__lectura_8cpp}}{}
-\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__maquina_estados_8cpp}{Prueba\+\_\+maquina\+Estados.\+cpp}} }{\pageref{_prueba__maquina_estados_8cpp}}{}
+\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__contro___i_r_8cpp}{Prueba\+\_\+contro\+\_\+\+IR.\+cpp}} \\*Programa de prueba para el control dual (Botones e Infrarrojo) de un LED }{\pageref{_prueba__contro___i_r_8cpp}}{}
+\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__interrupciones_8cpp}{Prueba\+\_\+interrupciones.\+cpp}} \\*Programa de prueba para la gestión de interrupciones externas mediante botones }{\pageref{_prueba__interrupciones_8cpp}}{}
+\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__lectura_8cpp}{Prueba\+\_\+lectura.\+cpp}} \\*Programa de prueba para la lectura y calibración de sensores QTR }{\pageref{_prueba__lectura_8cpp}}{}
+\item\contentsline{section}{test/\mbox{\hyperlink{_prueba__maquina_estados_8cpp}{Prueba\+\_\+maquina\+Estados.\+cpp}} \\*Programa de prueba para la Máquina de Estados Finitos (FSM) }{\pageref{_prueba__maquina_estados_8cpp}}{}
 \end{DoxyCompactList}
